--- a/auth/login.html
+++ b/auth/login.html
@@ -29,7 +29,7 @@
             </div>
             <div class="text-center mb-6">
                 <h1 class="text-2xl font-bold text-white mb-1">Connexion</h1>
-                <p class="text-blue-100 text-sm">Accédez à votre compte Flash Services</p>
+                <p class="text-blue-100 text-sm">Accédez à votre compte Flash Service</p>
             </div>
 
             <form id="formulaireDeConnexion" class="space-y-4">
@@ -107,7 +107,7 @@
 
             <div class="mt-6 text-center">
                 <p class="text-blue-100 text-sm">
-                    Nouveau sur Flash Services ?
+                    Nouveau sur Flash Service ?
                     <a href="register.html" class="text-yellow-300 hover:text-yellow-100 font-medium transition-colors duration-200">
                         Créer un compte
                     </a>
