--- a/auth/register.html
+++ b/auth/register.html
@@ -30,7 +30,7 @@
             
             <div class="text-center mb-6">
                 <h1 class="text-2xl font-bold text-white mb-1">Inscription</h1>
-                <p class="text-blue-100 text-sm">Créez votre compte Flash Services</p>
+                <p class="text-blue-100 text-sm">Créez votre compte Flash Service</p>
             </div>
 
             <form id="formulaireInscription" class="space-y-4">
@@ -131,7 +131,7 @@
                     </button>
                 </div>
 
-                <p class="text-blue-200 text-xs px-1">Le mot de passe doit être 8 chiffres</p>
+                <p class="text-blue-200 text-xs px-1">Le mot de passe doit être 8 caractères</p>
                 
                 <div class="relative">
                     <input 
