--- a/index.html
+++ b/index.html
@@ -545,108 +545,80 @@
         </div>
     </section>
 
-    <section class="section-contact py-20 bg-gradient-to-br from-blue-950 via-slate-900">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <section id="contact" class="py-20 section-contact py-20 bg-gradient-to-br from-blue-950 via-slate-900 relative overflow-hidden">
+
+        <div class="absolute inset-0">
+            <div class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-couleurPrincipale-900/10 to-purple-900/10"></div>
+        </div>
+        
+        <div class="relative z-10 max-w-7xl mx-auto px-4">
             <div class="text-center mb-16">
-                <h2 class="titre-section text-4xl sm:text-5xl font-black text-white mb-6">
-                    Contactez <span class="texte-gradient">Nous</span>
+                <div class="inline-flex items-center morphismeVerre text-white px-6 py-3 rounded-full mb-6 border border-couleurAccent-400/30">
+                    <i class="fas fa-comments mr-2 text-couleurAccent-400"></i>
+                    <span class="font-semibold">Nous Contacter</span>
+                </div>
+                <h2 class="text-4xl sm:text-5xl lg:text-6xl font-black text-white mb-6">
+                    Support <span class="texte-gradient">24/7</span>
                 </h2>
-                <p class="description-section text-xl text-gray-300 max-w-3xl mx-auto font-light">
-                    Notre équipe est disponible 24h/7j pour vous accompagner
+                <p class="text-xl text-gray-300 max-w-3xl mx-auto font-light">
+                    Notre équipe est disponible 24h/24 pour vous accompagner dans vos paris
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-2 gap-8 lg:gap-12">
-                <div class="space-y-6">
-                    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 border border-white/20">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-gradient-to-r from-green-500 to-green-600 rounded-full flex items-center justify-center mr-4">
-                                <i class="fab fa-whatsapp text-white text-xl"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-lg font-bold text-white">WhatsApp</h3>
-                                <p class="text-white/70">Support rapide et direct</p>
-                            </div>
+            <div class="grid lg:grid-cols-2 gap-12 items-center">
+                <div class="space-y-8">
+                    <div class="flex items-center space-x-4">
+                        <div class="w-16 h-16 bg-gradient-to-br from-green-500 to-emerald-600 rounded-2xl flex items-center justify-center">
+                            <i class="fab fa-whatsapp text-white text-2xl"></i>
                         </div>
-                        <a href="https://wa.me/+22505764642" class="text-jaune-accent font-bold hover:text-jaune-clair transition-colors">
-                            +225 07 77 16 93 13
-                        </a>
+                        <div>
+                            <h3 class="text-xl font-bold text-white mb-1">WhatsApp</h3>
+                            <p class="text-gray-400">+225 05 76 46 42 41</p>
+                            <a href="https://wa.me/+22505764642" class="text-green-400 hover:text-green-300 transition-colors">Chatter maintenant</a>
+                        </div>
                     </div>
 
-                    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 border border-white/20">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-gradient-to-r from-blue-500 to-blue-600 rounded-full flex items-center justify-center mr-4">
-                                <i class="fab fa-telegram text-white text-xl"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-lg font-bold text-white">Telegram</h3>
-                                <p class="text-white/70">Rejoignez notre canal</p>
-                            </div>
+                    <div class="flex items-center space-x-4">
+                        <div class="w-16 h-16 bg-bleu-principal rounded-2xl flex items-center justify-center">
+                            <i class="fas fa-envelope text-white text-2xl"></i>
                         </div>
-                        <a href="https://t.me/flashservice_ci" class="text-jaune-accent font-bold hover:text-jaune-clair transition-colors">
-                            @flashservice_ci
-                        </a>
+                        <div>
+                            <h3 class="text-xl font-bold text-white mb-1">Email</h3>
+                            <p class="text-gray-400">flashservice436@gmail.com</p>
+                            <a href="mailto:flashservice436@gmail.com" class="text-primary-400 hover:text-text-primary-500 transition-colors">Envoyer un email</a>
+                        </div>
                     </div>
 
-                    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 border border-white/20">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-gradient-to-r from-red-500 to-red-600 rounded-full flex items-center justify-center mr-4">
-                                <i class="fas fa-envelope text-white text-xl"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-lg font-bold text-white">Email</h3>
-                                <p class="text-white/70">Support professionnel</p>
-                            </div>
+                    <div class="flex items-center space-x-4">
+                        <div class="w-16 h-16 bg-gradient-to-br from-purple-500 to-pink-600 rounded-2xl flex items-center justify-center">
+                            <i class="fas fa-clock text-white text-2xl"></i>
                         </div>
-                        <a href="mailto:contact@flashservice.ci" class="text-jaune-accent font-bold hover:text-jaune-clair transition-colors">
-                            contact@flashservice.ci
-                        </a>
-                    </div>
-
-                    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 border border-white/20">
-                        <div class="flex items-center mb-4">
-                            <div class="w-12 h-12 bg-gradient-to-r from-purple-500 to-purple-600 rounded-full flex items-center justify-center mr-4">
-                                <i class="fas fa-clock text-white text-xl"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-lg font-bold text-white">Horaires</h3>
-                                <p class="text-white/70">Service disponible</p>
-                            </div>
+                        <div>
+                            <h3 class="text-xl font-bold text-white mb-1">Disponibilité</h3>
+                            <p class="text-gray-400">24h/24 - 7j/7</p>
+                            <p class="text-jaune-accent">Réponse garantie en moins de 5 minutes</p>
                         </div>
-                        <p class="text-jaune-accent font-bold">24h/24 - 7j/7</p>
                     </div>
                 </div>
 
-                <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 sm:p-8 border border-white/20">
+                <div class="morphismeVerre rounded-3xl p-8 border border-white/10">
                     <h3 class="text-2xl font-bold text-white mb-6">Envoyez-nous un message</h3>
                     <form class="space-y-6">
                         <div>
-                            <label for="nom" class="block text-white/80 mb-2">Nom complet</label>
-                            <input type="text" id="nom" name="nom" class="w-full bg-white/20 border border-white/30 rounded-lg px-4 py-3 text-white placeholder-white/60 focus:outline-none focus:border-jaune-accent transition-colors" placeholder="Votre nom complet">
+                            <input type="text" placeholder="Votre nom" class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-white placeholder-gray-400 focus:border-couleurPrincipale-400 focus:outline-none transition-colors">
                         </div>
                         <div>
-                            <label for="telephone" class="block text-white/80 mb-2">Téléphone</label>
-                            <input type="tel" id="telephone" name="telephone" class="w-full bg-white/20 border border-white/30 rounded-lg px-4 py-3 text-white placeholder-white/60 focus:outline-none focus:border-jaune-accent transition-colors" placeholder="+225 XX XX XX XX">
+                            <input type="email" placeholder="Votre email" class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-white placeholder-gray-400 focus:border-couleurPrincipale-400 focus:outline-none transition-colors">
                         </div>
                         <div>
-                            <label for="sujet" class="block text-white/80 mb-2">Sujet</label>
-                            <select id="sujet" name="sujet" class="w-full bg-white/20 border border-white/30 rounded-lg px-4 py-3 focus:outline-none focus:border-jaune-accent transition-colors">
-                                <option value="">Choisir un sujet</option>
-                                <option value="recharge">Recharge de compte</option>
-                                <option value="retrait">Retrait de gains</option>
-                                <option value="pronostics">Pronostics VIP</option>
-                                <option value="bonus">Bonus et promotions</option>
-                                <option value="support">Support technique</option>
-                                <option value="autre">Autre</option>
-                            </select>
+                            <input type="tel" placeholder="Votre téléphone" class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-white placeholder-gray-400 focus:border-couleurPrincipale-400 focus:outline-none transition-colors">
                         </div>
                         <div>
-                            <label for="message" class="block text-white/80 mb-2">Message</label>
-                            <textarea id="message" name="message" rows="4" class="w-full bg-white/20 border border-white/30 rounded-lg px-4 py-3 text-white placeholder-white/60 focus:outline-none focus:border-jaune-accent transition-colors resize-none" placeholder="Décrivez votre demande..."></textarea>
+                            <textarea rows="4" placeholder="Votre message" class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-white placeholder-gray-400 focus:border-couleurPrincipale-400 focus:outline-none transition-colors resize-none"></textarea>
                         </div>
-                        <button type="submit" class="w-full bg-gradient-to-r from-jaune-accent to-jaune-clair text-bleu-fonce py-4 rounded-lg font-bold hover:shadow-xl transform hover:scale-105 transition-all duration-300">
+                        <button class="w-full bg-gradient-to-r from-couleurPrincipale-600 via-purple-600 to-pink-600 text-white py-3 rounded-xl font-semibold hover:shadow-xl transition-all duration-300 transform hover:scale-105">
                             <i class="fas fa-paper-plane mr-2"></i>
-                            Envoyer le Message
+                            Envoyer le message
                         </button>
                     </form>
                 </div>
@@ -660,7 +632,7 @@
                 <div class="lg:col-span-2">
                     <div class="flex items-center mb-6">
                         <div>
-                            <span class="text-xl font-black texte-gradient">FLASH SERVICE</span>
+                            <span class="text-xl font-black texte-gradient">Flash Service</span>
                             <div class="text-sm text-gray-400 font-medium">Votre partenaire de confiance</div>
                         </div>
                     </div>
