modification du cote bonus et bookmakers

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         Pronostics
                         <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-gradient-to-r from-blue-400 to-yellow-400 transition-all duration-300 group-hover:w-full"></span>
                     </a>
-                    <a href="#bookmakers" class="relative text-white/80 hover:text-white transition-all duration-300 font-medium groupe-lien">
+                    <a href="#bonus" class="relative text-white/80 hover:text-white transition-all duration-300 font-medium groupe-lien">
                         Bonus
                         <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-gradient-to-r from-blue-400 to-yellow-400 transition-all duration-300 group-hover:w-full"></span>
                     </a>
@@ -85,7 +85,7 @@
     
     <div class="menu-mobile fixed top-0 left-0 h-full morphisme-verre z-50 w-280 max-w-sm">
         <div class="flex justify-between items-center p-6 border-b border-white/10">
-            <span class="text-xl font-black texte-gradient">FLASH SERVICE</span>
+            <span class="text-xl font-black texte-gradient">Flash Service</span>
             <button onclick="fermerMenu()" class="text-white hover:text-gray-300">
                 <i class="fas fa-times text-xl"></i>
             </button>
@@ -102,7 +102,7 @@
                 <a href="#pronostics" class="block text-white hover:text-yellow-400 transition-colors font-medium py-3 border-b border-white/10" onclick="fermerMenu()">
                     <i class="fas fa-chart-line mr-3"></i>Pronostics
                 </a>
-                <a href="#bookmakers" class="block text-white hover:text-yellow-400 transition-colors font-medium py-3 border-b border-white/10" onclick="fermerMenu()">
+                <a href="#bonus" class="block text-white hover:text-yellow-400 transition-colors font-medium py-3 border-b border-white/10" onclick="fermerMenu()">
                     <i class="fas fa-gift mr-3"></i>Bonus
                 </a>
                 <a href="#contact" class="block text-white hover:text-yellow-400 transition-colors font-medium py-3 border-b border-white/10" onclick="fermerMenu()">
@@ -310,10 +310,10 @@
                     <div class="text-3xl font-bold text-jaune-accent mb-2">200%</div>
                     <p class="text-white/80 mb-4">Bonus de bienvenue jusqu'à 200,000 FCFA</p>
                     <div class="flex space-x-2">
-                        <button class="w-full bg-gradient-to-r from-red-500 to-red-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
+                        <button class="w-full bg-bleu-fonce text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
                             Obtenir le bonus
                         </button>
-                        <button class="bg-gradient-to-r from-red-500 to-red-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all w-16">
+                        <button class="bg-bleu-fonce text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all w-16">
                             <i class="fa-solid fa-download"></i>
                         </button>
                     </div>
@@ -326,10 +326,10 @@
                     <div class="text-3xl font-bold text-jaune-accent mb-2">130%</div>
                     <p class="text-white/80 mb-4">Bonus sport jusqu'à 130,000 FCFA</p>
                     <div class="flex space-x-2">
-                        <button class="w-full bg-gradient-to-r from-blue-500 to-blue-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
+                        <button class="w-full bg-accent-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
                             Obtenir le bonus
                         </button>
-                        <button class="bg-gradient-to-r from-blue-500 to-blue-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all w-16">
+                        <button class="bg-accent-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all w-16">
                             <i class="fa-solid fa-download"></i>
                         </button>
                     </div>
@@ -341,7 +341,7 @@
 
                     <h3 class="text-xl font-bold text-white mb-2">Mardi bonus</h3>
                     <p class="text-white/80 mb-4">Jusqu'à 5 000 F pour les meilleurs dépôts de la semaine.</p>
-                    <button class="w-full bg-gradient-to-r from-green-500 to-green-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
+                    <button class="w-full bg-primary-900 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
                         Obtenir le bonus
                     </button>
                 </div>
@@ -351,7 +351,7 @@
 
                     <h3 class="text-xl font-bold text-white mb-2">Quiz bonus</h3>
                     <p class="text-white/80 mb-4">Réponds au quiz, gagne jusqu'à 5 000 F.</p>
-                    <button class="w-full bg-gradient-to-r from-purple-500 to-purple-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
+                    <button class="w-full bg-gradient-to-r from-accent-600 to-accent-700 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all">
                         Obtenir le Bonus
                     </button>
                 </div>
@@ -436,10 +436,10 @@
                     <p class="text-gray-400 text-sm mb-4">Bonus de premier dépôt 100,000 FCFA</p>
 
                     <div class="flex space-x-2">
-                        <button class="w-full bg-gradient-to-r from-couleurPrincipale-500 to-blue-600 text-white py-2 rounded-lg font-semibold hover:shadow-lg transition-all duration-300">
+                        <button class="w-full bg-gradient-to-r from-green-800 to-green-900 text-white py-2 rounded-lg font-semibold hover:shadow-lg transition-all duration-300">
                             Obtenir le bonus
                         </button>
-                        <button class="bg-gradient-to-r from-couleurPrincipale-500 to-blue-600 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all w-16">
+                        <button class="bg-gradient-to-r from-green-800 to-green-900 text-white py-3 rounded-lg font-bold hover:shadow-lg transition-all w-16">
                             <i class="fa-solid fa-download"></i>
                         </button>
                     </div>
@@ -637,7 +637,7 @@
                         </div>
                     </div>
                     <p class="text-gray-300 mb-6 max-w-md text-md">
-                        Leader en Côte d'Ivoire pour les services de paiement des paris sportifs. Recharge et retrait rapides, pronostics d'experts avec 92% de réussite.
+                        Le choix N°1 des parieurs en Côte d'Ivoire ! Recharges ultra rapides, retraits sécurisés, et des pronostics d'experts à 92 % de réussite. Gagnez plus, perdez moins.
                     </p>
                     <div class="flex space-x-4">
                         <a href="https://wa.me/+22505764642" class="w-12 h-12 bg-green-500 rounded-xl flex items-center justify-center hover:bg-green-400 transition-all transform hover:scale-110">
