modification au niveau du temoignage et du footer

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                         </div>
                         <div class="ml-4">
                             <div class="text-white font-bold">Kouassi Ange</div>
-                            <div class="text-gray-400">Client VIP</div>
+                            <div class="text-gray-400">Membre VIP</div>
                         </div>
                     </div>
                     <div class="text-yellow-400 mb-4">
@@ -494,7 +494,7 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <p class="text-gray-300 italic">
-                        "Grâce aux pronostics de Flash Service, j'ai multiplié mes gains par 3 ! Service rapide et fiable."
+                        "Faisant partir des membres VIP je reçois des bonus presque tous les mardis."
                     </p>
                 </div>
 
@@ -538,7 +538,7 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <p class="text-gray-300 italic">
-                        "87% de réussite sur les pronostics VIP, c'est du jamais vu ! Flash Service change la donne."
+                        "92% de réussite sur les pronostics, c'est du jamais vu ! Flash Service change la donne."
                     </p>
                 </div>
             </div>
@@ -678,8 +678,8 @@
                 <div>
                     <h4 class="text-xl font-bold mb-6 text-white">Contact</h4>
                     <ul class="space-y-3">
-                        <li class="text-gray-400">
-                            <i class="fas fa-envelope mr-2 text-primary-400"></i>
+                        <li class="text-gray-400 flex">
+                            <i class="fas fa-envelope mr-2 text-primary-400 mt-1"></i>
                             flashservice436@gmail.com
                         </li>
                         <li class="text-gray-400">
