--- a/auth/login.html
+++ b/auth/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flash Services - Connexion</title>
+    <title>Flash Service - Connexion</title>
+    <link rel="shortcut icon" href="/assets/img/log.jpeg" type="image/jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/assets/css/login.css">
 </head>
@@ -115,6 +116,7 @@
             </div>
         </div>
     </div>
+    
     <script src="/script/login.js"></script>
 </body>
 </html>
