--- a/auth/register.html
+++ b/auth/register.html
@@ -3,44 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flash Services - Inscription</title>
+    <title>Flash Service - Inscription</title>
+    <link rel="shortcut icon" href="/assets/img/log.jpeg" type="image/jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/assets/css/register.css">
+
 </head>
-<body class="min-h-screen gradient-bg flex items-center justify-center p-4">
+<body class="min-h-screen arriere-plan-degrade flex items-center justify-center p-4">
     <div class="absolute inset-0 overflow-hidden">
-        <div class="absolute -top-40 -right-40 w-80 h-80 bg-blue-800 rounded-full mix-blend-multiply filter blur-xl opacity-70 float-animation"></div>
-        <div class="absolute -bottom-40 -left-40 w-80 h-80 bg-blue-900 rounded-full mix-blend-multiply filter blur-xl opacity-70 float-animation" style="animation-delay: 2s;"></div>
-        <div class="absolute top-40 left-40 w-80 h-80 bg-blue-700 rounded-full mix-blend-multiply filter blur-xl opacity-60 float-animation" style="animation-delay: 4s;"></div>
+        <div class="absolute -top-40 -right-40 w-80 h-80 bg-blue-800 rounded-full mix-blend-multiply filter blur-xl opacity-70 animation-flottante"></div>
+        <div class="absolute -bottom-40 -left-40 w-80 h-80 bg-blue-900 rounded-full mix-blend-multiply filter blur-xl opacity-70 animation-flottante" style="animation-delay: 2s;"></div>
+        <div class="absolute top-40 left-40 w-80 h-80 bg-blue-700 rounded-full mix-blend-multiply filter blur-xl opacity-60 animation-flottante" style="animation-delay: 4s;"></div>
     </div>
 
-    <div class="relative w-full max-w-lg">
-        <div class="glass-effect rounded-2xl shadow-2xl p-6">
-            <div class="flex items-center justify-between mb-6">
+    <div class="relative w-full max-w-md">
+        <div class="effet-verre rounded-2xl shadow-2xl p-5">
+            <div class="flex items-center justify-between mb-5">
                 <button class="flex items-center text-blue-200 hover:text-white transition-colors duration-200">
                     <a href="/index.html" class="flex">
-                        <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
                         </svg>
                         Accueil
                     </a>
                 </button>
-                <img src="/assets/img/logo.png" class="inline-flex items-center justify-center w-12 h-12 rounded-xl" alt="">
+                <img src="/assets/img/logo.png" class="inline-flex items-center justify-center w-10 h-10 rounded-xl" alt="">
             </div>
             
-            <div class="text-center mb-6">
-                <h1 class="text-2xl font-bold text-white mb-1">Inscription</h1>
+            <div class="text-center mb-5">
+                <h1 class="text-xl font-bold text-white mb-1">Inscription</h1>
                 <p class="text-blue-100 text-sm">Créez votre compte Flash Service</p>
             </div>
 
-            <form id="formulaireInscription" class="space-y-4">
-                <div class="grid grid-cols-2 gap-3">
+            <div id="zone-messages-erreur" class="hidden mb-4 p-3 bg-red-900/30 rounded-lg border border-red-700/50">
+                <div class="flex items-center">
+                    <svg class="w-4 h-4 text-red-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <span id="texte-message-erreur" class="text-red-100 text-xs"></span>
+                </div>
+            </div>
+
+            <form id="formulaire-inscription" class="space-y-3">
+                <div class="grid grid-cols-2 gap-2">
                     <div>
                         <input 
                             type="text" 
-                            id="prenomUtilisateur" 
+                            id="prenom-utilisateur" 
                             name="prenomUtilisateur"
-                            class="input-focus w-full px-3 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                            class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                             placeholder="Prénom"
                             required
                         >
@@ -48,9 +59,9 @@
                     <div>
                         <input 
                             type="text" 
-                            id="nomUtilisateur" 
+                            id="nom-utilisateur" 
                             name="nomUtilisateur"
-                            class="input-focus w-full px-3 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                            class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                             placeholder="Nom"
                             required
                         >
@@ -60,9 +71,9 @@
                 <div>
                     <input 
                         type="email" 
-                        id="adresseEmailUtilisateur" 
-                        name="adresseEmailUtilisateur"
-                        class="input-focus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                        id="adresse-email" 
+                        name="adresseEmail"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         placeholder="Adresse e-mail"
                         required
                     >
@@ -71,20 +82,21 @@
                 <div>
                     <input 
                         type="tel" 
-                        id="numeroTelephoneUtilisateur" 
-                        name="numeroTelephoneUtilisateur"
-                        class="input-focus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                        id="numero-telephone" 
+                        name="numeroTelephone"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         placeholder="Numéro de téléphone"
                         required
                     >
                 </div>
 
                 <div>
+                    <label class="block text-blue-100 text-sm mb-1 px-1">Date de naissance</label>
                     <input 
                         type="date" 
-                        id="dateNaissanceUtilisateur" 
-                        name="dateNaissanceUtilisateur"
-                        class="input-focus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                        id="date-naissance" 
+                        name="dateNaissance"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         required
                     >
                 </div>
@@ -92,9 +104,9 @@
                 <div>
                     <input 
                         type="text"
-                        id="adresseCompleteUtilisateur" 
-                        name="adresseCompleteUtilisateur"
-                        class="input-focus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300 resize-none"
+                        id="adresse-complete" 
+                        name="adresseComplete"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         placeholder="Adresse complète"
                         required
                     >
@@ -103,9 +115,9 @@
                 <div>
                     <input 
                         type="text" 
-                        id="codeParrainUtilisateur" 
-                        name="codeParrainUtilisateur"
-                        class="input-focus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                        id="code-parrainage" 
+                        name="codeParrainage"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         placeholder="Code parrain (facultatif)"
                     >
                 </div>
@@ -113,47 +125,57 @@
                 <div class="relative">
                     <input 
                         type="password" 
-                        id="motDePasseUtilisateur" 
-                        name="motDePasseUtilisateur"
-                        class="input-focus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                        id="password-utilisateur" 
+                        name="passwordUtilisateur"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         placeholder="Mot de passe"
                         required
                     >
                     <button 
                         type="button" 
-                        id="boutonAfficherMotDePasse"
+                        id="btnAffichagePassword"
                         class="absolute right-3 top-1/2 transform -translate-y-1/2 text-blue-200 hover:text-white transition-colors duration-200"
                     >
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
                         </svg>
                     </button>
                 </div>
 
-                <p class="text-blue-200 text-xs px-1">Le mot de passe doit être 8 caractères</p>
+                <p class="text-blue-200 text-xs px-1">Le mot de passe doit contenir au minimum 8 caractères</p>
                 
                 <div class="relative">
                     <input 
                         type="password" 
-                        id="confirmationMotDePasseUtilisateur" 
-                        name="confirmationMotDePasseUtilisateur"
-                        class="input-focus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                        id="confirmation-password" 
+                        name="confirmationPassword"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         placeholder="Confirmer le mot de passe"
                         required
                     >
+                    <button 
+                        type="button" 
+                        id="btnConfirmationPassword"
+                        class="absolute right-3 top-1/2 transform -translate-y-1/2 text-blue-200 hover:text-white transition-colors duration-200"
+                    >
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
+                        </svg>
+                    </button>
                 </div>
 
-                <div class="space-y-3">
+                <div class="space-y-2">
                     <label class="flex items-start">
                         <input 
                             type="checkbox" 
-                            id="acceptationConditionsGenerales"
-                            name="acceptationConditionsGenerales"
-                            class="mt-1 rounded border-white/20 bg-white/10 text-yellow-500 focus:ring-yellow-400 focus:ring-offset-0"
+                            id="conditions-generales"
+                            name="conditionsGenerales"
+                            class="mt-0.5 rounded border-white/20 bg-white/10 text-yellow-500 focus:ring-yellow-400 focus:ring-offset-0"
                             required
                         >
-                        <span class="ml-2 text-blue-100 text-sm">
+                        <span class="ml-2 text-blue-100 text-xs">
                             J'accepte les 
                             <a href="#" class="text-yellow-300 hover:text-yellow-100 transition-colors duration-200">conditions générales d'utilisation</a>
                         </span>
@@ -162,12 +184,12 @@
 
                 <button 
                     type="submit" 
-                    id="boutonSoumissionInscription"
-                    class="w-full bg-gradient-to-r from-blue-800 to-yellow-500 text-white font-bold py-3 px-4 rounded-xl hover:from-blue-900 hover:to-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-400 transform hover:scale-105 transition-all duration-300 shadow-lg"
+                    id="btn-validation"
+                    class="w-full bg-gradient-to-r from-blue-800 to-yellow-500 text-white font-bold py-2.5 px-4 rounded-xl hover:from-blue-900 hover:to-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-400 transform hover:scale-105 transition-all duration-300 shadow-lg"
                 >
-                    <span id="texteInscription">Créer mon compte</span>
-                    <div id="chargementInscription" class="hidden flex items-center justify-center">
-                        <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <span id="texte-validation">Créer mon compte</span>
+                    <div id="indicateur-chargement" class="hidden flex items-center justify-center">
+                        <svg class="animate-spin -ml-1 mr-3 h-4 w-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                             <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                             <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                         </svg>
@@ -176,7 +198,7 @@
                 </button>
             </form>
 
-            <div class="mt-6 text-center">
+            <div class="mt-4 text-center">
                 <p class="text-blue-100 text-sm">
                     Déjà inscrit ?
                     <a href="login.html" class="text-yellow-300 hover:text-yellow-100 font-medium transition-colors duration-200">
