responsivité pronostics accueil

--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center space-x-3">
                             <img src="assets/img/Manchester-City-Logo.png" alt="Manchester City" class="logo-club">
-                            <span class="text-white font-medium text-sm">Manchester City</span>
+                            <span class="text-white font-medium sm:text-sm text-[8px]">Manchester City</span>
                         </div>
                         <span class="text-gray-400 text-sm">vs</span>
                         <div class="flex items-center space-x-3">
-                            <span class="text-white font-medium text-sm">Arsenal</span>
+                            <span class="text-white font-medium sm:text-sm text-[8px]">Arsenal</span>
                             <img src="assets/img/Arsenal-Logo.png" alt="Arsenal" class="logo-club">
                         </div>
                     </div>
@@ -264,11 +264,11 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center space-x-3">
                             <img src="assets/img/Real-Madrid-Logo.png" alt="Real Madrid" class="logo-club">
-                            <span class="text-white font-medium text-sm">Real Madrid</span>
+                            <span class="text-white font-medium sm:text-sm text-[8px]">Real Madrid</span>
                         </div>
                         <span class="text-gray-400 text-sm">vs</span>
                         <div class="flex items-center space-x-3">
-                            <span class="text-white font-medium text-sm">FC Barcelona</span>
+                            <span class="text-white font-medium sm:text-sm text-[8px]">FC Barcelona</span>
                             <img src="assets/img/Barcelona-Logo.png" alt="Barcelona" class="logo-club">
                         </div>
                     </div>
@@ -295,11 +295,11 @@
                     <div class="flex items-center justify-between mb-4">
                         <div class="flex items-center space-x-3">
                             <img src="assets/img/PSG-Logo.png" alt="PSG" class="logo-club">
-                            <span class="text-white font-medium text-sm">PSG</span>
+                            <span class="text-white font-medium sm:text-sm text-[8px]">PSG</span>
                         </div>
                         <span class="text-gray-400 text-sm">vs</span>
                         <div class="flex items-center space-x-3">
-                            <span class="text-white font-medium text-sm">Bayern Munich</span>
+                            <span class="text-white font-medium sm:text-sm text-[8px]">Bayern Munich</span>
                             <img src="assets/img/FC-Bayern-Munchen-Logo.png" alt="Bayern Munich" class="logo-club">
                         </div>
                     </div>
