--- a/auth/login.html
+++ b/auth/login.html
@@ -10,9 +10,9 @@
 </head>
 <body class="min-h-screen fondDegradeAnime flex items-center justify-center p-4">
     <div class="absolute inset-0 overflow-hidden">
-        <div class="absolute -top-40 -right-40 w-80 h-80 bg-blue-800 rounded-full mix-blend-multiply filter blur-xl opacity-70 elementFlottant"></div>
-        <div class="absolute -bottom-40 -left-40 w-80 h-80 bg-blue-900 rounded-full mix-blend-multiply filter blur-xl opacity-70 elementFlottant" style="animation-delay: 2s;"></div>
-        <div class="absolute top-40 left-40 w-80 h-80 bg-blue-700 rounded-full mix-blend-multiply filter blur-xl opacity-60 elementFlottant" style="animation-delay: 4s;"></div>
+        <div class="absolute -top-40 -right-40 w-80 h-80 bg-blue-800 rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
+        <div class="absolute -bottom-40 -left-40 w-80 h-80 bg-blue-900 rounded-full mix-blend-multiply filter blur-xl opacity-70"></div>
+        <div class="absolute top-40 left-40 w-80 h-80 bg-blue-700 rounded-full mix-blend-multiply filter blur-xl opacity-60"></div>
     </div>
 
     <div class="relative w-full max-w-sm">
@@ -33,14 +33,14 @@
                 <p class="text-blue-100 text-sm">Accédez à votre compte Flash Service</p>
             </div>
 
-            <form id="formulaireDeConnexion" class="space-y-4">
+            <form id="formulaireConnexion" class="space-y-4">
                 <div>
                     <input 
-                        type="email" 
-                        id="champAdresseEmailUtilisateur" 
-                        name="adresseEmailUtilisateur"
-                        class="champSaisieFocus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
-                        placeholder="Adresse e-mail"
+                        type="tel" 
+                        id="numeroTelephone" 
+                        name="numeroTelephone"
+                        class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
+                        placeholder="Numéro de téléphone"
                         required
                     >
                 </div>
@@ -48,15 +48,15 @@
                 <div class="relative">
                     <input 
                         type="password" 
-                        id="champMotDePasseUtilisateur" 
-                        name="motDePasseUtilisateur"
+                        id="Password" 
+                        name="PasswordUtilisateur"
                         class="champSaisieFocus w-full px-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
                         placeholder="Mot de passe"
                         required
                     >
                     <button 
                         type="button" 
-                        id="boutonAffichageMasquerMotDePasse"
+                        id="btnAfficherPassword"
                         class="absolute right-3 top-1/2 transform -translate-y-1/2 text-blue-200 hover:text-white transition-colors duration-200"
                     >
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -83,11 +83,11 @@
 
                 <button 
                     type="submit" 
-                    id="boutonValidationConnexion"
+                    id="boutonValidation"
                     class="w-full bg-gradient-to-r from-blue-800 to-yellow-500 text-white font-bold py-3 px-4 rounded-xl hover:from-blue-900 hover:to-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-400 transform hover:scale-105 transition-all duration-300 shadow-lg"
                 >
-                    <span id="texteActionConnexion">Se connecter</span>
-                    <div id="indicateurChargementConnexion" class="hidden flex items-center justify-center">
+                    <span id="texteConnexion">Se connecter</span>
+                    <div id="chargementConnexion" class="hidden flex items-center justify-center">
                         <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                             <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                             <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
@@ -97,11 +97,11 @@
                 </button>
             </form>
 
-            <div id="messageResultatConnexion" class="mt-4 text-center hidden">
-                <div id="messageSuccesConnexion" class="hidden bg-green-500/20 border border-green-400 text-green-100 px-4 py-2 rounded-lg">
+            <div id="zoneAffichageMessages" class="mt-4 text-center hidden">
+                <div id="messageSucces" class="hidden bg-green-500/20 border border-green-400 text-green-100 px-4 py-2 rounded-lg">
                     Connexion réussie ! Redirection...
                 </div>
-                <div id="messageErreurConnexion" class="hidden bg-red-500/20 border border-red-400 text-red-100 px-4 py-2 rounded-lg">
+                <div id="messageErreur" class="hidden bg-red-500/20 border border-red-400 text-red-100 px-4 py-2 rounded-lg">
                     Identifiants incorrects. Veuillez réessayer.
                 </div>
             </div>
@@ -116,7 +116,7 @@
             </div>
         </div>
     </div>
-    
-    <script src="/script/login.js"></script>
+
+   <script src="/script/login.js"></script>
 </body>
 </html>
