--- a/auth/register.html
+++ b/auth/register.html
@@ -107,7 +107,7 @@
                         id="adresse-complete" 
                         name="adresseComplete"
                         class="focus-champ-saisie w-full px-3 py-2.5 bg-white/10 border border-white/20 rounded-xl text-white placeholder-blue-200 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:border-transparent transition-all duration-300"
-                        placeholder="Adresse complète"
+                        placeholder="Votre addresse"
                         required
                     >
                 </div>
