--- a/users/dashboardProfile.html
+++ b/users/dashboardProfile.html
@@ -147,7 +147,10 @@
     
                                 <div>
                                     <label for="champSaisieAdresseComplete" class="block text-sm font-medium text-gray-300 mb-2">Adresse Complète</label>
-                                    <input type="adress" id="champSaisieAdresseComplete" name="adresseCompleteUtilisateur" value="Abidjan Koumassi" class="w-full px-3 py-2 sm:px-4 sm:py-3 bg-gray-700 border border-gray-600 rounded-xl text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-bleu-principal focus:border-transparent transition-all">
+                                    <select id="champSaisieAdresseComplete" name="adresseCompleteUtilisateur" value="Abidjan" class="w-full px-3 py-2 sm:px-4 sm:py-3 bg-gray-700 border border-gray-600 rounded-xl text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-bleu-principal focus:border-transparent transition-all">
+                                        <option value="Abidjan">Abidjan</option>
+                                        <option value="Daloa">Daloa</option>
+                                    </select>
                                 </div>
     
                                 <button type="submit" id="boutonMettreAJourInformations" class="w-full bg-gradient-to-r from-bleu-principal to-bleu-fonce hover:from-bleu-fonce hover:to-bleu-principal text-white font-bold py-4 px-6 rounded-xl transition-all duration-300 transform hover:scale-[1.02] focus:outline-none focus:ring-4 focus:ring-bleu-principal/50">
