--- a/users/detailTransaction.html
+++ b/users/detailTransaction.html
@@ -19,59 +19,59 @@
             </button>
 
             <div class="box text-center">
-                <div class="my-2">
-                    <span class="text-2xl mr-2">👋</span>
-                    <span class="text-white font-bold text-lg">Bienvenue, YAO</span>
+                <div class="my-1">
+                    <span class="text-2xl mr-1">👋</span>
+                    <span class="text-white font-bold text-md">Bienvenue, YAO</span>
                 </div>
-                <div class="mb-6">
-                    <div class="text-white text-lg mb-4 font-medium">Solde : 12 000 XOF</div>
-                    <div class="flex gap-2">
-                        <a href="dashboardDepot.html" class="bg-green-600 text-sm hover:bg-green-700 text-white px-4 py-2 rounded-lg flex items-center justify-center space-x-2 transition-all flex-1">
+                <div class="mb-4">
+                    <div class="text-white text-base mb-4 font-medium text-md">Solde : 12 000 XOF</div>
+                    <div class="flex gap-2 flex-row">
+                        <button id="depot" class="bg-green-600 text-xs hover:bg-green-700 text-white px-4 py-2 rounded-lg flex items-center justify-center space-x-2 transition-all flex-1">
                             <i class="fas fa-dollar-sign"></i>
                             <span>Dépôt</span>
-                        </a>
-                        <a href="dashboardRetrait.html" class="bg-red-600 text-sm hover:bg-red-700 text-white px-4 py-2 rounded-lg flex items-center justify-center space-x-2 transition-all flex-1">
+                        </button>
+                        <button id="retrait" class="bg-red-600 text-xs hover:bg-red-700 text-white px-4 py-2 rounded-lg flex items-center justify-center space-x-2 transition-all flex-1">
                             <i class="fas fa-money-bill-wave"></i>
                             <span>Retrait</span>
-                        </a>
+                        </button>
                     </div>
                 </div>
             </div>
             
-            <nav class="space-y-2 px-4 py-2">
-                <a href="dashboardUser.html" class="lien flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+            <nav class="space-y-2 px-4 py-1">
+                <a href="dashboardUser.html" class="lien flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-chart-pie"></i>
                     <span class="font-medium">Dashboard</span>
                 </a>
-                <a href="dashboardDepot.html" class="lien flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+                <a href="dashboardDepot.html" class="lien flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-plus-circle"></i>
                     <span class="font-medium">Dépôt</span>
                 </a>
-                <a href="dashboardRetrait.html" class="lien flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+                <a href="dashboardRetrait.html" class="lien flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-minus-circle"></i>
                     <span class="font-medium">Retrait</span>
                 </a>
-                <a href="dashboardTransaction.html" class="lien actif flex items-center space-x-3 py-3 px-4 rounded-xl bg-gradient-to-r from-bleu-principal to-bleu-fonce text-white">
+                <a href="dashboardTransaction.html" class="lien actif flex items-center space-x-3 py-2 px-3 rounded-xl bg-gradient-to-r from-bleu-principal to-bleu-fonce text-white">
                     <i class="fas fa-list-alt"></i>
                     <span class="font-medium">Mes Transactions</span>
                 </a>
-                <a href="dashboardPronostic.html" class="lien flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+                <a href="dashboardPronostic.html" class="lien flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-futbol"></i>
                     <span class="font-medium">Pronostic</span>
                 </a>
-                <a href="dashboardVideo.html" class="lien flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+                <a href="dashboardVideo.html" class="lien flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-video"></i>
                     <span class="font-medium">Vidéo</span>
                 </a>
-                <a href="dashboardBonus.html" class="lien flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+                <a href="dashboardBonus.html" class="lien flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-gift"></i>
                     <span class="font-medium">Bonus</span>
                 </a>
-                <a href="dashboardProfile.html" class="lien flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+                <a href="dashboardProfile.html" class="lien flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-user"></i>
                     <span class="font-medium">Profile</span>
                 </a>
-                <a href="#" id="btnDeconnexion" class="flex items-center space-x-3 py-3 px-4 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
+                <a href="#" id="btnDeconnexion" class="flex items-center space-x-3 py-2 px-3 rounded-xl hover:bg-gray-700 text-gray-300 hover:text-white transition-all">
                     <i class="fas fa-sign-out-alt"></i>
                     <span class="font-medium">Déconnexion</span>
                 </a>
@@ -189,10 +189,6 @@
                                             <i class="fas fa-check-circle mr-2"></i>
                                             Validé et Terminé
                                         </span>
-                                    </div>
-                                    <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center py-2 lg:py-3">
-                                        <span class="text-gray-400 text-sm lg:text-base mb-1 sm:mb-0">Référence de Transaction:</span>
-                                        <span class="text-white font-medium text-base lg:text-lg break-all">REF-OM-789456123</span>
                                     </div>
                                 </div>
                             </div>
