--- a/users/dashboardDepot.html
+++ b/users/dashboardDepot.html
@@ -121,7 +121,7 @@
                                     <div>
                                         <label class="block text-sm font-semibold text-gray-300 mb-3">Montant du Dépôt (FCFA)</label>
                                         <div class="relative">
-                                            <input type="number" id="montantDepot" min="500" class="w-full px-3 py-2 sm:px-4 sm:py-3 bg-gray-700 border border-gray-600 rounded-xl text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent transition-all" value="1000">
+                                            <input type="number" id="montantDepot" min="1000" class="w-full px-3 py-2 sm:px-4 sm:py-3 bg-gray-700 border border-gray-600 rounded-xl text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent transition-all" placeholder="1000">
                                             <span class="absolute right-4 top-1/2 transform -translate-y-1/2 text-gray-400 font-medium">FCFA</span>
                                         </div>
                                     </div>
@@ -149,12 +149,16 @@
                                             <img src="/assets/img/wave.png" alt="Wave">
                                             <span>Wave</span>
                                         </div>
+                                        <div class="dropdown-item" data-value="solde-bonus">
+                                            <img src="/assets/img/log.jpeg" alt="solde Bonus">
+                                            <span>Solde Bonus</span>
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div>
                                     <label class="block text-sm font-semibold text-gray-300 mb-3">Numéro de Téléphone</label>
-                                    <input type="tel" id="telUser" class="w-full px-3 py-2 sm:px-4 sm:py-3 bg-gray-700 border border-gray-600 rounded-xl text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent transition-all" value="0172317983">
+                                    <input type="tel" id="telUser" class="w-full px-3 py-2 sm:px-4 sm:py-3 bg-gray-700 border border-gray-600 rounded-xl text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent transition-all"  placeholder="Ex: 0172317983">
                                 </div>
 
                                 <div>
@@ -224,7 +228,7 @@
                                     <i class="fas fa-gift text-yellow-400 mt-1"></i>
                                     <div>
                                         <h4 class="font-semibold text-white mb-1">Bonus de Bienvenue</h4>
-                                        <p class="text-sm text-gray-400">100% de bonus sur votre premier dépôt</p>
+                                        <p class="text-sm text-gray-400">0% de frais de dépôt </p>
                                     </div>
                                 </div>
 
